# gimp-layer-duplicator-tool

./: .gitignore  AUTHORS  ChangeLog  README  config.h  config.h.in  config.status  configure.in  intltool-update  make.run  re-config.run
help/en/: index.html
src/: Makefile.am  enum.h  gimp_plugin_ldt  hidden-image.c  hidden-image.h  interface.c  interface.h  ldt_list_view_operations.c  ldt_list_view_operations.h  ldt_operation.c  ldt_operation.h  ldt_operation_rotate.c  ldt_operation_rotate.h  ldt_operation_translate.c  ldt_operation_translate.h  ldt_tree_model_operations.c  ldt_tree_model_operations.h  live-preview.c  live-preview.h  main.c  main.h  render.c  render.h  state-image.c  state-image.h  types.h  work-image.h
src/.deps/: hidden-image.Po  interface.Po  ldt_list_view_operations.Po  ldt_operation.Po  ldt_operation_rotate.Po  ldt_operation_translate.Po  ldt_tree_model_operations.Po  live-preview.Po  main.Po  render.Po  state-image.Po
